<resources>
    <string name="app_name">Ăn truyện</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="click_to_login">Đã có tài khoản? </string>
    <string name="click_to_register">Chưa có tài khoản? </string>
    <string name="log_out">Log out</string>
    <string name="search">Tìm kiếm</string>
    <string name="discovery">Khám phá</string>
    <string name="home">Trang chủ</string>
    <string name="download">Đã lưu</string>
    <string name="profile">Cá nhân</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none" />
    <string name="chapter">chương</string>
    <string name="recent_chapter">Đang đọc: </string>
    <string name="author">Tác giả:</string>
    <string name="number_of_chapter">Số chương:</string>
    <string name="status">Tình trạng:</string>
    <string name="views">Lượt xem:</string>
    <string name="welcomeback">WELCOME BACK!</string>
    <string name="user_name">Ariana Grinder</string>
    <string name="none_login">Đăng nhập/ Đăng kí</string>
    <string name="welcome">CHÀO MỪNG ĐẾN VỚI ĂN TRUYỆN</string>
    <string name="bo_loc">Bộ lọc</string>
    <string name="genres_quote">Thể loại (Cách nhau bằng dấu phẩy)</string>
    <string name="choose_cover_image">Chọn ảnh bìa</string>
    <string name="save_draft">Lưu bản nháp</string>
    <string name="exit">Thoát</string>
    <string name="upload">Tải lên</string>
    <string name="final_chapter">Chương cuối</string>
    <string name="reload">Tải lại</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="facebook_app_id">913319257132315</string>
    <string name="fb_login_protocol_scheme">antruyen</string>
    <string name="facebook_client_token">56789</string>
    <string name="default_web_client_id">106083076262-7tm7tqu57udnbpasl8j980mlkrlmlvg9.apps.googleusercontent.com</string>
    <string name="testtx">Đây là đoạn văn mẫu.\nLựa chọn kích cỡ chữ phù hợp, màu chữ và nền tương phản với nhau nhưng vẫn đảm bảo không mỏi mắt khi đọc trong thời gian dài.</string>
    <string name="hintnx">Nội dung nhận xét tối thiểu 3 kí tự, tối đa 1000 kí tự</string>
    <string name="csbmne">Vui lòng đọc kỹ Chính Sách Bảo Mật này trước khi bạn tiến hành tái, cài đặt, sử dụng tất cả hoặc bất kỳ phần nào của Ứng dụng (bao gồm nhưng không giới hạn phần mềm, các file và các tài liệu liên quan) hoặc sử dụng các dịch vụ do Ăn Truyện cung cấp để kết nối đến Ứng Dụng.
        \n\nBạn chấp thuận và đồng ý bị ràng buộc bởi các quy định và điều kiện trong Thỏa Thuận này khi thực hiện các thao tác trên đây. Trong trường hợp bạn không đồng ý với bất kỳ điều khoản sử dụng nào của chúng tôi (phiên bản này và các phiên bản cập nhật), bạn vui lòng không tải, cài đặt, sử dụng Ứng dụng hoặc tháo gỡ Ứng Dụng ra khỏi thiết bị di động của bạn.
\n\n\n1.	Cập nhật Thỏa Thuận này có thể được cập nhật thường xuyên bởi Ăn Truyện. Phiên bản cập nhật sẽ thay thế cho các quy định và điều kiện trong thỏa thuận ban đầu. Bạn có thể truy cập vào Ứng Dụng Chính Sách Bảo Mật để xem nội dung chi tiết của phiên bản cập nhật.
\n\n\n2.	Quyền Sở Hữu Ứng Dụng Ứng Dụng này được phát triển và sở hữu bởi Ăn Truyện. Tất cả các quyền sở hữu trí tuệ liên quan đến Ứng Dụng (bao gồm nhưng không giới hạn mã nguồn, các sửa đổi, bổ sung, cập nhật của Ứng Dụng) và các tài liệu hướng dẫn liên quan (nếu có) sẽ thuộc quyền sở hữu duy nhất của Ăn Truyện. Không có cá nhân, tổ chức nào được phép sao chép, tái tạo, phân phối hoặc thực hiện các hình thức khác xâm phạm quyền sở hữu mà không có sự đồng ý và cho phép bằng văn bản của Ăn Truyện.
\n\n\n3.	Tài Khoản
\n•	Để sử dụng đầy đủ tính năng của Ứng Dụng, bạn phải tạo một tài khoản theo yêu cầu của chúng tôi. Bạn cam kết rằng việc sử dụng tài khoản phải tuân thủ các quy định của Ăn Truyện, đồng thời tất cả thông tin bạn cung cấp cho chúng tôi là đúng, chính xác, và đầy đủ tại thời điểm được yêu cầu. Mọi quyền lợi và nghĩa vụ của bạn sẽ căn cứ trên thông tin tài khoản bạn đã đăng ký. Do đó, nếu có bất kỳ thông tin sai lệch nào, chúng tôi sẽ không chịu trách nhiệm. Trong trường hợp thông tin đó ảnh hưởng hoặc hạn chế quyền lợi của bạn, chúng tôi sẽ không chịu trách nhiệm.
\n•	Chúng tôi sử dụng tính năng liên kết đăng nhập với Facebook, Google, Apple và yêu cầu bạn cung cấp tên, email, và ảnh đại diện để hiển thị trên ứng dụng.
\n•	Bạn có thể yêu cầu xoá tài khoản và các thông tin liên quan đến tài khoản theo hướng dẫn.

\n\n\n4.	Quyền lợi và trách nhiệm Bạn có quyền sử dụng Ứng Dụng và các dịch vụ khác mà chúng tôi cung cấp; tuy nhiên, việc sử dụng đó sẽ không bao gồm các hành vi sau đây nếu không có sự đồng ý bằng văn bản của Ăn truyện:
\n•	Sao chép, chỉnh sửa, tái tạo, tạo ra sản phẩm mới hoặc phiên bản phát sinh trên cơ sở Ứng Dụng này;
\n•	Bàn, chuyển giao, cấp quyền lại, tiết lộ hoặc hình thức chuyển giao khác hoặc đưa một phần hoặc toàn bộ Ứng Dụng cho bất kỳ bên thứ ba;
\n•	Sử dụng Ứng Dụng để cung cấp dịch vụ cho bất kỳ bên thứ ba (tổ chức, cá nhân);
\n•	Di chuyển, xóa bỏ, thay đổi bất kỳ thông báo chính đáng hoặc dấu hiệu nào của Ứng Dụng (bao gồm nhưng không giới hạn các tuyên bố về bản quyền);
\n•	Thiết kế lại, biên dịch, tháo gỡ, chỉnh sửa, đảo lộn thiết kế của Ứng Dụng hoặc nội dung Ứng Dụng;
\n•	Thay đổi hoặc hủy bỏ trạng thái ban đầu của Ứng Dụng;
\n•	Sử dụng Ứng Dụng để thực hiện bất kỳ hành động gây hại cho hệ thống an ninh mạng của Ăn truyện, bao gồm nhưng không giới hạn sử dụng dữ liệu hoặc truy cập vào máy chủ hệ thống hoặc tài khoản không được phép; truy cập vào hệ thống mạng để xóa bỏ, chỉnh sửa và thêm các thông tin; phát tán các chương trình độc hại, virus hoặc thực hiện bất kỳ hành động nào khác nhằm gây hại hoặc phá hủy hệ thống mạng;
\n•	Đăng nhập và sử dụng Ứng Dụng bằng một phần mềm tương thích của bên thứ ba hoặc hệ thống không được phát triển, cấp quyền hoặc chấp thuận bởi Ăn truyện;
\n•	Sử dụng, bán, cho mượn, sao chép, chỉnh sửa, kết nối tới, phiên dịch, phát hành, công bố các thông tin liên quan đến Ứng Dụng, xây dựng mirror website để công bố các thông tin này hoặc để phát triển các sản phẩm phát sinh, công việc hoặc dịch vụ;
\n•	Sử dụng Ứng Dụng để đăng tải, chuyển, truyền hoặc lưu trữ các thông tin vi phạm pháp luật, vi phạm thuần phong mỹ tục của dân tộc;
\n•	Sử dụng Ứng Dụng để sử dụng, đăng tải, chuyển, truyền hoặc lưu trữ bất kỳ nội dung vi phạm quyền sở hữu trí tuệ, bí mật kinh doanh hoặc quyền pháp lý của bên thứ ba;
\n•	Sử dụng Ứng Dụng hoặc các dịch vụ khác được cung cấp bởi Ăn truyện trong bất kỳ hình thức vi phạm pháp luật nào, cho bất kỳ mục đích bất hợp pháp nào; Các hình thức vi phạm khác.
\n\n\n5.	Xử Lý Vi Phạm Trong trường hợp bạn vi phạm bất kỳ quy định nào trong Thỏa Thuận này, Ăn truyện có quyền ngay lập tức khóa tài khoản của bạn và/hoặc xóa bỏ toàn bộ các thông tin, nội dung vi phạm. Đồng thời, tùy thuộc vào tính chất và mức độ vi phạm, bạn sẽ phải chịu trách nhiệm trước cơ quan có thẩm quyền, Ăn truyện và bên thứ ba về mọi thiệt hại gây ra bởi hoặc xuất phát từ hành vi vi phạm của bạn.
\n\n\n6.	Quyền Truy Cập và Thu Thập Thông Tin Khi bạn tạo một tài khoản, chúng tôi sẽ thu thập thông tin nhất định có thể được sử dụng để nhận diện bạn, bao gồm tên, địa chỉ email và ảnh của bạn. Chúng tôi không nhận hoặc lưu trữ mật khẩu của bất kỳ Tài Khoản Facebook, Google, Apple nào của bạn. Chúng tôi sử dụng các dịch vụ bên thứ ba, nó có thể thu thập thông tin định danh của bạn. Các điều khoản sử dụng của các dịch vụ bên thứ ba được sử dụng trong ứng dụng:
\n•	Google Play Services
\n•	AdMob
\n•	Firebase Analytics
\n\n\n7.	Cam Kết Bảo Mật Thông Tin Chúng tôi cam kết giữ bí mật tất cả thông tin mà bạn cung cấp cho Ăn truyện hoặc chúng tôi thu thập từ bạn và không tiết lộ với bất kỳ bên thứ ba nào trừ khi có yêu cầu từ Cơ quan Nhà nước có thẩm quyền.
\n\n\n8.	Liên Lạc Với Chúng Tôi
\n•	Địa chỉ email: antruyen@gmail.com
\n\n\nTrân trọng cảm ơn bạn đã sử dụng sản phẩm và dịch vụ của chúng tôi.
</string>
</resources>