<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF">

    <LinearLayout
        android:id="@+id/item_horizontal_content_storyInfo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"> <!-- Điều chỉnh giá trị để bo tròn góc -->

            <FrameLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/item_horizontal_content_storyImage"
                    android:layout_width="125dp"
                    android:layout_height="201dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/book_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="8dp"
                    android:background="#20000000"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewBook"
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_book4_png" />

                    <TextView
                        android:id="@+id/item_horizontal_content_tvChapter2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_medium"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="10"
                        android:text="@string/chapter"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text_size" />
                </LinearLayout>


                <TextView
                    android:id="@+id/item_horizontal_content_tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="10"
                    android:text="Mirage"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/item_horizontal_content_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="2dp">

            <TextView
                android:id="@+id/item_horizontal_content_tvAuthor"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_semibold"
                android:maxLines="@android:integer/config_mediumAnimTime"
                android:text="@string/author"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_horizontal_content_tvChapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/number_of_chapter"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/item_horizontal_content_tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/status"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/item_horizontal_content_tvView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/views"
                android:textSize="@dimen/small_text_size" />

            <ToggleButton
                android:id="@+id/toggleButtonFavorite"
                android:layout_width="26dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/favorite_button_selector"
                android:textOff="@string/none"
                android:textOn="@string/none" /> <!-- Custom selector for background -->

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>